--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" prefix="og: https://ogp.me/ns#">
+<html lang="en" class="notranslate" translate="no" prefix="og: https://ogp.me/ns#">
 
 <head>
 
@@ -32,7 +32,7 @@
 
     <meta property="og:locale" content="en_EN">
     <meta property="og:site_name" content="Shitcoin">
-    <meta property="og:url" content="https://shitcoinproject.com/"> <!--Change this-->
+    <meta property="og:url" content="https://shitcoinproject.com/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Shitcoin">
     <meta property="og:description" content="The first shitcoin that is actually no shit.">    
@@ -215,6 +215,18 @@
                 <p id="accountAddress" class="animated"></p>
             </div>
             <p class="animated" id="userBalance" style="display: none;">Your Balance: <span class="token-balance"></span> SHIT</p>
+        </div>
+        <div id="preSetup" style="display: none;">
+            <p class="how-works__intro animated">Remaining time: <span id="remaining-time"></span>
+            </p>
+            <br/>
+            <div class="progress center animated">
+                <div class="progress-bar"></div>
+                <div class="progress-bar2"></div>
+            </div>
+            <p class="animated"><span class="time-percentage"></span> % completed</p>
+            <br>
+            <a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=NzJqam91M2lpbG9ib3ZzNGs4YzR0aHU3anIgc2hpdGNvaW5wcm9qZWN0MEBt&amp;tmsrc=shitcoinproject0%40gmail.com"><button type=submit class="btn btn--small btn--blue btnWallet animated" href>Add Reminder</button></a>
         </div>
         <p class="animated" id="loading">Loading...</p>
         </div>
